--- a/merging/all_the_way.ipynb
+++ b/merging/all_the_way.ipynb
@@ -45,17 +45,8 @@
    },
    "outputs": [],
    "source": [
-    "weather['Precipitation_In '].replace('T','0', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "weather['Precipitation_In '].replace('T','0', inplace=True)\n",
+    "\n",
     "weather['precipitation'] = weather['Precipitation_In '].astype(float)"
    ]
   },
@@ -292,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "weather['Max_Temperature_F'] = np.where(weather['Max_Temperature_F']==0,\n",
@@ -693,7 +686,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "trip_w = pd.merge(trip_z, weather, how='left', \n",
@@ -759,7 +754,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "firsts = trip_w.groupby(['Subscription Type','date_to_join']).first().reset_index()\n",
@@ -770,7 +767,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "subs.rename(columns={0:'trip_count'}, inplace=True)"
@@ -1439,7 +1438,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bycat = subs.groupby(['cat','Subscription Type'])['trip_count'].sum().reset_index().pivot(\n",
