adding regex and boxplot

--- a/check_data/checking_data.ipynb
+++ b/check_data/checking_data.ipynb
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -1616,6 +1616,97 @@
     "weather_columns_with_missing_data = weather.isnull().any()[weather.isnull().any()==True].index\n",
     "trip_columns_with_missing_data = trip.isnull().any()[trip.isnull().any()==True].index\n",
     "station_columns_with_missing_data = station.isnull().any()[station.isnull().any()==True].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date\n",
+      "Max_Temperature_F\n",
+      "['Max_Temperature_F']\n",
+      "Mean_Temperature_F\n",
+      "['Max_Temperature_F', 'Mean_Temperature_F']\n",
+      "Min_TemperatureF\n",
+      "['Max_Temperature_F', 'Mean_Temperature_F', 'Min_TemperatureF']\n",
+      "Max_Dew_Point_F\n",
+      "MeanDew_Point_F\n",
+      "Min_Dewpoint_F\n",
+      "Max_Humidity\n",
+      "Mean_Humidity \n",
+      "Min_Humidity \n",
+      "Max_Sea_Level_Pressure_In \n",
+      "Mean_Sea_Level_Pressure_In \n",
+      "Min_Sea_Level_Pressure_In \n",
+      "Max_Visibility_Miles \n",
+      "Mean_Visibility_Miles \n",
+      "Min_Visibility_Miles \n",
+      "Max_Wind_Speed_MPH \n",
+      "Mean_Wind_Speed_MPH \n",
+      "Max_Gust_Speed_MPH\n",
+      "['Max_Temperature_F', 'Mean_Temperature_F', 'Min_TemperatureF', 'Max_Gust_Speed_MPH']\n",
+      "Precipitation_In \n",
+      "Cloud_Cover \n",
+      "Events\n",
+      "['Max_Temperature_F', 'Mean_Temperature_F', 'Min_TemperatureF', 'Max_Gust_Speed_MPH', 'Events']\n",
+      "Wind_Dir_Degrees\n",
+      "landmark\n"
+     ]
+    }
+   ],
+   "source": [
+    "weather_columns_with_missing_data = []\n",
+    "for c in weather.columns:\n",
+    "    print(c)\n",
+    "    if weather[c].isnull().sum() > 0:\n",
+    "        weather_columns_with_missing_data.append(c)\n",
+    "        print(weather_columns_with_missing_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date 0\n",
+      "Max_Temperature_F 3\n",
+      "Mean_Temperature_F 3\n",
+      "Min_TemperatureF 3\n",
+      "Max_Dew_Point_F 0\n",
+      "MeanDew_Point_F 0\n",
+      "Min_Dewpoint_F 0\n",
+      "Max_Humidity 0\n",
+      "Mean_Humidity  0\n",
+      "Min_Humidity  0\n",
+      "Max_Sea_Level_Pressure_In  0\n",
+      "Mean_Sea_Level_Pressure_In  0\n",
+      "Min_Sea_Level_Pressure_In  0\n",
+      "Max_Visibility_Miles  0\n",
+      "Mean_Visibility_Miles  0\n",
+      "Min_Visibility_Miles  0\n",
+      "Max_Wind_Speed_MPH  0\n",
+      "Mean_Wind_Speed_MPH  0\n",
+      "Max_Gust_Speed_MPH 138\n",
+      "Precipitation_In  0\n",
+      "Cloud_Cover  0\n",
+      "Events 782\n",
+      "Wind_Dir_Degrees 0\n",
+      "landmark 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in weather.columns:\n",
+    "    print(c, weather[c].isnull().sum())"
    ]
   },
   {
@@ -1723,6 +1814,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subscription Type 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in trip.columns:\n",
+    "    if trip[c].isnull().sum() > 0:\n",
+    "        #print('name of column {} and number of missing values {}'.format(c,trip[c].isnull().sum() ))\n",
+    "        print(c, trip[c].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max_Temperature_F 3\n",
+      "Mean_Temperature_F 3\n",
+      "Min_TemperatureF 3\n",
+      "Max_Gust_Speed_MPH 138\n",
+      "Events 782\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in weather.columns:\n",
+    "    if weather[c].isnull().sum() > 0:\n",
+    "        #print('name of column {} and number of missing values {}'.format(c,trip[c].isnull().sum() ))\n",
+    "        print(c, weather[c].isnull().sum())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1769,6 +1904,102 @@
    ],
    "source": [
     "weather[['Max_Temperature_F','Mean_Temperature_F','Min_TemperatureF','Max_Gust_Speed_MPH','Events']].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Max_Temperature_F</th>\n",
+       "      <th>Mean_Temperature_F</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>917.000000</td>\n",
+       "      <td>917.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>67.002181</td>\n",
+       "      <td>56.926936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.661892</td>\n",
+       "      <td>7.317213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>52.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>78.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Max_Temperature_F  Mean_Temperature_F\n",
+       "count         917.000000          917.000000\n",
+       "mean           67.002181           56.926936\n",
+       "std             8.661892            7.317213\n",
+       "min             0.000000           38.000000\n",
+       "25%            61.000000           52.000000\n",
+       "50%            66.000000           56.000000\n",
+       "75%            73.000000           62.000000\n",
+       "max            95.000000           78.000000"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather[['Max_Temperature_F','Mean_Temperature_F']].describe()"
    ]
   },
   {
@@ -1897,12 +2128,31 @@
    "outputs": [],
    "source": [
     "### Your code here\n",
-    "weather_filled = weather.fillna(value={'Max_Temperature_F': weather.Max_Temperature_F.mean(),\n",
-    "                                        'Mean_Temperature_F': weather.Mean_Temperature_F.mean(),\n",
-    "                                        'Min_TemperatureF': weather.Min_TemperatureF.mean(),\n",
+    "mean_max_temp = weather['Max_Temperature_F'].mean()\n",
+    "weather_filled = weather.fillna(value={'Max_Temperature_F': mean_max_temp,\n",
+    "                                        'Mean_Temperature_F': weather['Mean_Temperature_F'].mean(),\n",
+    "                                        'Min_TemperatureF': weather['Min_TemperatureF'].mean(),\n",
     "                                        'Events': 'no_event'\n",
     "                                       })\n",
     "trip_filled = trip.dropna(subset=['Subscription Type'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_weather = weather.fillna('Missing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_weather.fillna(0, inplace=True)"
    ]
   },
   {
@@ -2025,7 +2275,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Your code here\n",
