--- a/merging/all_the_way.ipynb
+++ b/merging/all_the_way.ipynb
@@ -277,17 +277,8 @@
    "outputs": [],
    "source": [
     "weather['Min_TemperatureF'] = np.where(weather['Min_TemperatureF']>40000,\n",
-    "                                       weather['Mean_Temperature_F'], weather['Min_TemperatureF'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "                                       weather['Mean_Temperature_F'], weather['Min_TemperatureF'])\n",
+    "\n",
     "weather['Max_Temperature_F'] = np.where(weather['Max_Temperature_F']==0,\n",
     "                                       weather['Mean_Temperature_F'], weather['Max_Temperature_F'])"
    ]
