--- a/behind_the_scenes/behind_the_scenes.ipynb
+++ b/behind_the_scenes/behind_the_scenes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,6 +26,47 @@
     "station = pd.read_csv('station.csv')\n",
     "weather = pd.read_csv('weather.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### for loading dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "example_dict = {'Boston':['Northeastern University',\n",
+    "                         'Boston University'],\n",
+    "               'London':['UCL',\"Kings College\",'Queen Mary University','Royal Holloway University'],\n",
+    "               'Oxford':['Oxford University']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save('/home/esztersomos/Documents/CEU/winter_2019/merging/example_dict.npy', example_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -386,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = pd.DataFrame({'a':[1,2,3,4,5,6], 'aa':['a','b','c','d','e','f']})\n",
