--- a/checking_data2/Q2_preprocess_part1.ipynb
+++ b/checking_data2/Q2_preprocess_part1.ipynb
@@ -909,12 +909,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "weather = pd.read_csv('weather_filled.csv')\n",
     "for c in weather.columns:\n",
     "    new_c = ''\n",
@@ -981,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1522,9 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.DataFrame({'a':np.random.rand(100),\n",
@@ -2742,8 +2743,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "weather['Precipitation_In'].replace('T','0', inplace=True)\n",
@@ -2760,7 +2763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3023,12 +3026,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "weather['Min_Temperature_F'] = np.where(weather['Min_Temperature_F']>40000,\n",
     "                                       weather['Mean_Temperature_F'], weather['Min_Temperature_F'])\n",
     "\n",
@@ -3067,7 +3069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -3099,7 +3101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3142,7 +3144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -3160,7 +3162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3190,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -3208,7 +3210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3239,7 +3241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -3261,7 +3263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3290,7 +3292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
