--- a/Q1/Q1-class.ipynb
+++ b/Q1/Q1-class.ipynb
@@ -105,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['a_asdate'] = pd.to_datetime(df['a'], format='%Y-%m-%d %H:%M')\n",
@@ -3828,7 +3830,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "trip['start_date'] = pd.to_datetime(trip['Start Date'])"
@@ -4448,108 +4452,43 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df['fdfd' = fdfsfds\n",
+    "  fdsfs\n",
+    "  for i \n",
+    "  \n",
+    "  ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "somoseszter@gmail.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "1"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'a' in ['a','b']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         False\n",
-       "1         False\n",
-       "2         False\n",
-       "3         False\n",
-       "4         False\n",
-       "5         False\n",
-       "6         False\n",
-       "7         False\n",
-       "8         False\n",
-       "9         False\n",
-       "10        False\n",
-       "11        False\n",
-       "12        False\n",
-       "13        False\n",
-       "14        False\n",
-       "15        False\n",
-       "16        False\n",
-       "17        False\n",
-       "18        False\n",
-       "19        False\n",
-       "20        False\n",
-       "21        False\n",
-       "22        False\n",
-       "23        False\n",
-       "24        False\n",
-       "25        False\n",
-       "26        False\n",
-       "27        False\n",
-       "28        False\n",
-       "29        False\n",
-       "          ...  \n",
-       "143975    False\n",
-       "143976    False\n",
-       "143977    False\n",
-       "143978    False\n",
-       "143979    False\n",
-       "143980    False\n",
-       "143981    False\n",
-       "143982    False\n",
-       "143983    False\n",
-       "143984    False\n",
-       "143985    False\n",
-       "143986    False\n",
-       "143987    False\n",
-       "143988    False\n",
-       "143989    False\n",
-       "143990    False\n",
-       "143991    False\n",
-       "143992    False\n",
-       "143993    False\n",
-       "143994    False\n",
-       "143995    False\n",
-       "143996    False\n",
-       "143997    False\n",
-       "143998    False\n",
-       "143999    False\n",
-       "144000    False\n",
-       "144001    False\n",
-       "144002    False\n",
-       "144003    False\n",
-       "144004    False\n",
-       "Name: Start Station, Length: 144005, dtype: bool"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trip['Start Station'].isin(['a','b'])"
+    "i"
    ]
   },
   {
