--- a/merging/all_the_way.ipynb
+++ b/merging/all_the_way.ipynb
@@ -3774,75 +3774,21 @@
    },
    "outputs": [],
    "source": [
-    "trip['duration'] = (pd.to_datetime(trip['end_date']) - pd.to_datetime(trip['start_date'])).astype('timedelta64[m]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "trip['duration'] = (pd.to_datetime(trip['end_date']) - pd.to_datetime(trip['start_date'])).astype('timedelta64[m]')\n",
+    "\n",
     "bystation = trip.groupby(['Start Station']).agg({\n",
     "    'duration':'mean',\n",
     "    'Trip ID':'count'\n",
-    "}).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "customer_ration = trip.groupby(['Start Station', 'Subscription Type']).size().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "customer_ration = customer_ration.pivot(index='Start Station', columns='Subscription Type', values=0).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "customer_ration['customer_ratio'] = customer_ration['Customer']/customer_ration['Subscriber']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "bystation = pd.merge(bystation, customer_ration[['Start Station', 'customer_ratio']], how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "}).reset_index()\n",
+    "\n",
+    "customer_ration = trip.groupby(['Start Station', 'Subscription Type']).size().reset_index()\n",
+    "\n",
+    "customer_ration = customer_ration.pivot(index='Start Station', columns='Subscription Type', values=0).reset_index()\n",
+    "\n",
+    "customer_ration['customer_ratio'] = customer_ration['Customer']/customer_ration['Subscriber']\n",
+    "\n",
+    "bystation = pd.merge(bystation, customer_ration[['Start Station', 'customer_ratio']], how='left')\n",
+    "\n",
     "bystation = pd.merge(bystation, station[['name', 'dockcount']], how='left', left_on='Start Station', right_on='name')"
    ]
   },
